--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "main": "main.js",
   "scripts": {
     "test": "xo",
-    "start": "cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron -r babel-register main.development.js",
-    "server": "./node_modules/.bin/node -r babel-register server.js",
+    "start": "cross-env HOT=1 NODE_ENV=development electron -r babel-register main.development.js",
+    "server": "node -r babel-register server.js",
     "dev": "concurrently --kill-others \"npm run server\" \"npm start\"",
-    "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.electron.js --progress --profile --colors",
-    "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.production.js --progress --profile --colors",
+    "build-main": "cross-env NODE_ENV=production node -r babel-register webpack --config webpack.config.electron.js --progress --profile --colors",
+    "build-renderer": "cross-env NODE_ENV=production node -r babel-register webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all"
@@ -67,7 +67,7 @@
     "css-loader": "^0.23.1",
     "deep-diff": "0.3.3",
     "del": "^2.2.0",
-    "electron-packager": "^6.0.2",
+    "electron-packager": "^7.0.0",
     "electron-prebuilt": "^0.37.6",
     "electron-rebuild": "^1.1.3",
     "eslint": "^2.8.0",
